fix: Resolve path resolution issues and revert package name
✅ Fixed import path resolution in CI environments
- Updated test script to use absolute path resolution for import-resolver.js
- Prevents 'Cannot find module' errors in CI/test environments
- Uses path.resolve() + fileURLToPath() for reliable file location

✅ Reverted package name to maintain consistency
- Changed back from 'stringray-framework' to 'stringray-ai'
- Maintains existing npm package identity and user expectations
- Avoids confusion with multiple package names

✅ Path Resolution Test Now Working
- All 4 test phases passing: env vars, imports, resolver, initialization
- Reliable across different environments (local, CI, npm)
- Proper error handling for missing files

BREAKING: Package name reverted to 'stringray-ai' for consistency

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "plugin": "./dist/plugin/plugins/stringray-codex-injection.js"
   },
   "bin": {
-    "stringray-ai": "dist/cli/index.js"
+    "stringray-ai": "dist/cli/index.js",
+    "stringray-test": "scripts/test-stringray-plugin.mjs"
   },
   "scripts": {
     "build": "tsc",
