--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,7 +54,7 @@ jobs:
       run: npm ci
 
     - name: Build application
-      run: npm run build
+      run: npm run build:all
 
     - name: Run build validation
       run: npm run validate
