--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,6 +56,9 @@ jobs:
     - name: Build application
       run: npm run build:all
 
+    - name: Install framework configuration
+      run: npx . install
+
     - name: Run build validation
       run: npm run validate
 
