feat: Migrate to scoped package @blaze0x1/stringray-ai
✅ Package Name Migration
- Changed from 'stringray-ai' to '@blaze0x1/stringray-ai'
- Professional scoped package naming for clean 1.0.0 release

✅ User Impact Analysis
- Installation: Users type 'npm install @blaze0x1/stringray-ai' (scoped name required)
- CLI Usage: Users can still use 'npx stringray-ai install' (bin field preserves command)
- File Paths: No changes - paths are relative to package location
- No breaking changes for CLI usage after installation

✅ Core Implementation Updates
- package.json: Updated name field to scoped package
- CLI code: Updated package root detection for scoped package path
- README: Updated installation examples with scoped package name

✅ Clean Release Strategy
- Publish as @blaze0x1/stringray-ai@1.0.0
- Avoids version history mess from previous attempts
- Professional package identity for enterprise adoption

BREAKING: Installation command changes to scoped package name
FEATURE: Professional scoped package with clean 1.0.0 release

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stringray-ai",
+  "name": "@blaze0x1/stringray-ai",
   "version": "1.0.0",
   "description": "⚡ StringRay ⚡: Bulletproof AI orchestration with systematic error prevention. Zero dead ends. Ship clean, tested, optimized code — every time.",
   "type": "module",
