feat: Finalize package name as 'strray' with StringRay branding
✅ Package Name Optimization
- Changed from '@blaze0x1/stringray-ai' to 'strray'
- Short, memorable package name for easy installation
- Maintains full 'StringRay' branding everywhere else

✅ User Experience Improvement
- Installation: 'npm install strray' (much easier to type)
- CLI Usage: 'npx strray install' (bin field updated)
- Branding: All titles, descriptions, docs keep 'StringRay'

✅ Technical Updates
- package.json: Updated name field to 'strray'
- CLI code: Updated package root detection for 'strray' path
- README: Updated installation examples
- Bin field: CLI commands work with 'npx strray'

✅ Clean 1.0.0 Release Ready
- No scoped package complexity
- Professional short name
- Easy to remember and type
- Full StringRay branding preserved

BREAKING: Package name changed to 'strray' (shorter, easier)
FEATURE: Maintains StringRay branding while optimizing package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@blaze0x1/stringray-ai",
+  "name": "strray",
   "version": "1.0.0",
   "description": "⚡ StringRay ⚡: Bulletproof AI orchestration with systematic error prevention. Zero dead ends. Ship clean, tested, optimized code — every time.",
   "type": "module",
