fix: Finalize CLI bin commands and documentation for strray package
✅ Bin Field Updated
- Changed CLI command from 'stringray-ai' to 'strray'
- Users now run 'npx strray install' instead of 'npx stringray-ai install'
- Updated bin field in package.json

✅ Documentation Updated
- All CLI command examples changed from 'stringray-ai' to 'strray'
- README installation and usage examples corrected
- Consistent command naming throughout docs

✅ Package Lock Regenerated
- Fresh package-lock.json with 'strray' as package name
- All dependencies properly resolved
- Clean dependency tree for 1.0.0 release

✅ CLI Validation Confirmed
- 'npx . --help' shows correct 'strray' command name
- All CLI functionality working with new package name
- Path resolution tests passing

BREAKING: CLI command changed from 'stringray-ai' to 'strray'
FEATURE: Consistent short package name across all interfaces

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "plugin": "./dist/plugin/plugins/stringray-codex-injection.js"
   },
   "bin": {
-    "stringray-ai": "dist/cli/index.js",
-    "stringray-test": "scripts/test-stringray-plugin.mjs"
+    "strray": "dist/cli/index.js",
+    "strray-test": "scripts/test-stringray-plugin.mjs"
   },
   "scripts": {
     "build": "tsc",
