feat: Finalize package name as strray-ai with complete branding
✅ Package Name Finalized: strray-ai
- Short, memorable name for easy installation
- Maintains full StringRay branding everywhere
- Professional package identity

✅ CLI Commands Updated
- Bin field: 'strray-ai' command for users
- README: All examples use 'npx strray-ai' commands
- Consistent CLI experience

✅ Installation Simplified
- Users type: 'npm install strray-ai'
- CLI usage: 'npx strray-ai install'
- No scoped package complexity

✅ Branding Preserved
- All titles, descriptions, docs: 'StringRay'
- Professional appearance maintained
- Clear brand identity

BREAKING: Package name finalized as 'strray-ai' (optimal balance)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "strray",
-  "version": "1.0.0",
+  "name": "strray-ai",
+  "version": "1.0.2",
   "description": "⚡ StringRay ⚡: Bulletproof AI orchestration with systematic error prevention. Zero dead ends. Ship clean, tested, optimized code — every time.",
   "type": "module",
   "main": "./dist/plugin/index.js",
@@ -9,7 +9,7 @@
     "plugin": "./dist/plugin/plugins/stringray-codex-injection.js"
   },
   "bin": {
-    "strray": "dist/cli/index.js",
+    "strray-ai": "dist/cli/index.js",
     "strray-test": "scripts/test-stringray-plugin.mjs"
   },
   "scripts": {
