🔧 Enhanced NPM Build - Automatic Claude MCP Exclusions
✨ Automated Claude MCP Server Management
- Enhanced postinstall script with automatic Claude MCP exclusions
- Automatically disables problematic global MCP servers during installation
- Prevents connection errors and UI spam in OpenCode

🛠️ Installation Process Improvements
- Added configureClaudeMCPExclusions() function to postinstall script
- Detects and disables global-everything, global-git, global-sqlite servers
- Graceful handling when Claude config doesn't exist

📦 Complete Package Bundling
- Updated package.json files array to include postinstall script
- All configuration files bundled for seamless user experience
- Zero manual configuration required for clean StringRay setup

🎯 User Experience Enhancement
- Installation now provides completely clean MCP panel
- No more connection error spam in OpenCode interface
- Professional out-of-the-box experience for all users

🔄 Automated Setup Flow
- Plugin registration → Agent configuration → MCP cleanup → Clean UX
- Comprehensive postinstall automation for enterprise deployments
- Maintains backward compatibility while improving user experience

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "opencode.json",
     ".opencode/oh-my-opencode.json",
     ".opencode/package.json",
+    "scripts/postinstall.cjs",
     "dist/cli",
     "dist/plugin",
     "dist/mcps",
