--- a/.github/workflows/ci-cd-monitor.yml
+++ b/.github/workflows/ci-cd-monitor.yml
@@ -25,7 +25,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run CI/CD Health Monitor
       run: node scripts/github-actions-monitor.cjs --report
