--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,7 +23,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Type check
       run: npm run typecheck
@@ -51,7 +51,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Build application
       run: npm run build:all
@@ -91,7 +91,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run performance tests
       run: npm run test:performance
@@ -117,7 +117,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run architect agent tests
       run: npm run test:architect
@@ -136,7 +136,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run E2E integration tests
       run: npm run test:e2e
@@ -156,7 +156,7 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run npm audit for vulnerabilities
       run: |
