--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
         registry-url: 'https://registry.npmjs.org/'
 
     - name: Install dependencies
-      run: npm ci
+      run: npm run ci-install
 
     - name: Run tests
       run: npm test
