--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -59,6 +59,9 @@ jobs:
     - name: Install framework configuration
       run: npx . install
 
+    - name: Run oh-my-opencode integration test
+      run: node scripts/validation/validate-oh-my-opencode-integration.js
+
     - name: Run build validation
       run: npm run validate
 
