fix: CI/CD postinstall command - use npm run postinstall
- Changed 'npx . install' to 'npm run postinstall'
- 'npx . install' was incorrect - no install script exists
- 'npm run postinstall' runs the actual postinstall script
- Postinstall will now copy .mcp.json with all 16 MCP servers
- Integration test will see correct server count

CI/CD will now properly install framework configuration before testing.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -57,7 +57,7 @@ jobs:
       run: npm run build:all
 
     - name: Install framework configuration
-      run: npx . install
+      run: npm run postinstall
 
     - name: Run oh-my-opencode integration test
       run: node scripts/validation/validate-oh-my-opencode-integration.js
