--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "strray-ai",
-  "version": "1.0.7",
+  "version": "1.0.11",
   "description": "⚡ StringRay ⚡: Bulletproof AI orchestration with systematic error prevention. Zero dead ends. Ship clean, tested, optimized code — every time.",
   "type": "module",
   "main": "./dist/plugin/index.js",
@@ -9,8 +9,7 @@
     "plugin": "./dist/plugin/plugins/stringray-codex-injection.js"
   },
   "bin": {
-    "strray-ai": "dist/cli/index.js",
-    "strray-test": "scripts/test-stringray-plugin.mjs"
+    "strray": "dist/cli/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -40,8 +39,9 @@
     "test:mcp-integration": "opencode mcp list && echo 'MCP servers verified'",
     "test:mcp-connectivity": "node scripts/validation/validate-mcp-connectivity.js",
     "test:oh-my-opencode-integration": "node scripts/validation/validate-oh-my-opencode-integration.js",
+    "test:postinstall-config": "node scripts/validation/validate-postinstall-config.js",
     "test:external-processes": "node scripts/validation/validate-external-processes.js",
-    "test:comprehensive": "npm run test:mcp-connectivity && npm run test:oh-my-opencode-integration && npm run test:external-processes",
+    "test:comprehensive": "npm run test:mcp-connectivity && npm run test:oh-my-opencode-integration && npm run test:postinstall-config && npm run test:external-processes",
     "test:all": "npm run test && npm run test:architect && npm run test:e2e && npm run test:path-resolution && npm run test:comprehensive",
     "security-audit": "npm audit --audit-level moderate --production",
     "test:ci": "CI=true npm test -- --run --reporter=json --no-coverage",
@@ -92,7 +92,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
     "@types/yaml": "^1.9.6",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -112,9 +112,9 @@
     "opencode.json",
     ".opencode/oh-my-opencode.json",
     ".opencode/package.json",
+    ".opencode/README.md",
     ".claude/.mcp.json",
     "scripts/postinstall.cjs",
-    "scripts/validation",
     "dist/cli",
     "dist/plugin",
     "dist/mcps",
@@ -123,14 +123,6 @@
     "dist/processors",
     "dist/state",
     "dist/utils",
-    "scripts/postinstall.cjs",
-    "scripts/test-stringray-plugin.mjs",
-    "scripts/test-path-resolver.mjs",
-    "scripts/validate-codex.js",
-    "scripts/test-comprehensive-path-resolution.mjs",
-    "scripts/test-full-plugin-no-timeout.sh",
-    "scripts/test-simple-prompt.mjs",
-    "scripts/test-complex-orchestration.mjs",
     "README.md",
     "LICENSE"
   ],
