--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,30 +1,32 @@
-name: Lint Code
+name: Code Quality
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main, master ]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm run ci-install
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
 
-    - name: Run ESLint
-      run: npm run lint
+      - name: TypeScript type check
+        run: npm run typecheck
 
-    - name: Run TypeScript type check
-      run: npm run typecheck
+      - name: ESLint
+        run: npm run lint
+
+      - name: Check formatting
+        run: npx prettier --check "src/**/*.{ts,tsx,js,jsx,json,md}"
