--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,40 +4,45 @@ on:
   release:
     types: [published]
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to publish (e.g., 1.0.1)'
-        required: true
-        default: 'patch'
 
 jobs:
   publish:
     runs-on: ubuntu-latest
-    environment: production
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
-        registry-url: 'https://registry.npmjs.org/'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
 
-    - name: Install dependencies
-      run: npm run ci-install
+      - name: Install dependencies
+        run: npm ci --ignore-scripts
 
-    - name: Run tests
-      run: npm test
+      - name: Build plugin
+        run: npm run build:plugin
 
-    - name: Build plugin
-      run: npm run build:plugin
+      - name: Validate package before publish
+        run: npm pack --dry-run
 
-    - name: Check package
-      run: npm pack --dry-run
+      - name: Run comprehensive tests
+        run: npm run test:comprehensive
 
-    - name: Publish to NPM
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Publish to npm
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Create GitHub deployment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.repos.createDeployment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.sha,
+              environment: 'npm',
+              description: 'Published strray-ai to npm registry'
+            });
