fix: Include consumer-runnable test scripts in published package
- Added test-*.mjs, test-*.sh, and validation/ to files array
- Restores consumer validation capabilities from v1.0.5
- Allows consumers to run framework validation tests

--- a/package.json
+++ b/package.json
@@ -115,6 +115,9 @@
     ".opencode/README.md",
     ".claude/.mcp.json",
     "scripts/postinstall.cjs",
+    "scripts/test-*.mjs",
+    "scripts/test-*.sh",
+    "scripts/validation/",
     "dist/cli",
     "dist/plugin",
     "dist/mcps",
