--- a/package.json
+++ b/package.json
@@ -115,6 +115,13 @@
     ".opencode/README.md",
     ".claude/.mcp.json",
     "scripts/postinstall.cjs",
+    "scripts/test-consumer-validation.mjs",
+    "scripts/test-consumer-readiness.mjs",
+    "scripts/test-final-consumer-validation.mjs",
+    "scripts/test-framework-boot.mjs",
+    "scripts/test-mcp-functionality.mjs",
+    "scripts/test-postinstall-files.mjs",
+    "scripts/test-configuration-validation.mjs",
     "scripts/test-*.mjs",
     "scripts/test-*.sh",
     "scripts/validation/",
